<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ucus_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="asus@todo.todo">asus</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosbag2_py</depend>
  <depend>tf2_ros</depend>
  <depend>ucus_sensorleri</depend>
  <depend>ucus_durum_tahmin</depend>
  <depend>ucus_mode_manager</depend>
  <depend>ucus_kontrol</depend>
  <depend>ucus_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
